# enum-repr-derive

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
src/: lib.rs
tests/: tests.rs
tests/compile-fail/: no_repr.rs  no_repr.stderr  repr_wrong_group.rs  repr_wrong_group.stderr  two_repr_types.rs  two_repr_types.stderr
tests/compile-pass/: repr_i8.rs  repr_u32.rs  repr_with_variant_named_error.rs
