[package]
name = 'enum-repr-derive'
version = '0.1.4-alpha.0'
authors = ['Sami Salonen']
edition = '2018'
license = 'MIT'
description = 'Simple trait for converting enum to and from its primitive repr type'
documentation = 'https://docs.rs/enum-repr-derive'
readme = 'README.md'
include = [
    '/README.md',
    '/LICENSE',
    '/Cargo.toml',
    '/src/*.rs',
]
keywords = [
    'enum',
    'conversion',
    'primitive',
]
categories = ['no-std']
homepage = 'https://github.com/ssalonen/enum-repr-derive'
repository = 'https://github.com/ssalonen/enum-repr-derive'

[lib]
proc-macro = true

[dependencies]
proc-macro2 = '1.0'
quote = '1.0'
syn = '1.0.55'
proc-macro-error = '1.0.4'

[dev-dependencies]
trybuild = '1.0.38'
rustversion = '1.0.4'
[badges.travis-ci]
repository = 'ssalonen/enum-repr-derive'
branch = 'master'

[badges.maintenance]
status = 'passively-maintained'
